flex/flex-tests/testData/js2_highlighting/CircularDependency.js2
class Foo extends <error descr="Circular dependency">Foo</error> {
}

interface Bar extends <error descr="Circular dependency">Bar</error> {
}